# project_may

./: .dockerignore  .gitignore  Dockerfile  build.sh  docker-compose.yml  nginx.conf  prompt-drops.md  pyproject.toml  requirements.txt  run_faketime.py
add_order/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
add_order/migrations/: 0001_initial.py  0002_order_cafe.py  0003_order_points_accrued.py  0004_order_duplicate_signature_order_is_duplicate.py  0005_order_duplicate_guard_v2.py  0006_order_rating.py
add_order/services/: receipt_ai.py  receipt_duplicates.py  receipt_matcher.py  receipt_validator.py
cafes/: admin.py  forms.py  models.py  urls.py  views.py
cafes/migrations/: 0001_initial.py  0002_menuitem.py  0003_menucategory_slug.py  0004_cafestaff_cafe_working_hours_cafe_description.py  0005_cafe_latitude_cafe_longitude.py  0006_alter_cafe_options_alter_cafestaff_options_and_more.py  0007_city_cafe_city.py  0008_cafe_coupon_bg_menuitem_image_focus.py
config/: settings.py  urls.py
drops/: admin.py  models.py  services.py  tests.py  urls.py  views.py
feed/: admin.py  models.py  urls.py  views.py
friends/: admin.py  models.py  services.py  urls.py  views.py
promo/: admin.py  models.py  services.py  urls.py  views.py
staff/: urls.py  views.py
static/css/: auth.css  (+12 more)
templates/: base.html
trades/: admin.py  apps.py  context_processors.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
user_profile/: admin.py  forms.py  levels.py  models.py  urls.py  views.py
user_registration/: forms.py  models.py  urls.py  views.py
(+85 files in other folders)
